[gd_scene load_steps=4 format=3 uid="uid://bqpwmqcil0l8o"]

[ext_resource type="Script" path="res://Level/LevelScenes/CharacterCustomizer/CustomizeCharacter/CharacterCustomizer.gd" id="1_ftbbs"]
[ext_resource type="Script" path="res://Level/LevelScenes/CharacterCustomizer/CustomizeCharacter/CharacterSection/InventorySpaces/UtilitySpaces.gd" id="2_otb1w"]
[ext_resource type="Script" path="res://Level/LevelScenes/CharacterCustomizer/CustomizeCharacter/InventorySection/ItemColumn.gd" id="2_top4l"]

[node name="CharacterCustomizer" type="Node" node_paths=PackedStringArray("item_column", "utility_container")]
script = ExtResource("1_ftbbs")
item_column = NodePath("Control/PanelContainer/MarginContainer/HBoxContainer/ItemContainer/MarginContainer/VBoxContainer/ItemList")
utility_container = NodePath("Control/PanelContainer/MarginContainer/HBoxContainer/CharacterContainer/MarginContainer/VBoxContainer/UtilitiesContainer/UtilityBoxes")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Control/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="HBoxContainer" type="HBoxContainer" parent="Control/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="ItemContainer" type="PanelContainer" parent="Control/PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Control/PanelContainer/MarginContainer/HBoxContainer/ItemContainer"]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="Control/PanelContainer/MarginContainer/HBoxContainer/ItemContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="Control/PanelContainer/MarginContainer/HBoxContainer/ItemContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Inventory"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Control/PanelContainer/MarginContainer/HBoxContainer/ItemContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ItemList" type="VBoxContainer" parent="Control/PanelContainer/MarginContainer/HBoxContainer/ItemContainer/MarginContainer/VBoxContainer" node_paths=PackedStringArray("utility_spaces", "root")]
layout_mode = 2
alignment = 1
script = ExtResource("2_top4l")
utility_spaces = NodePath("../../../../CharacterContainer/MarginContainer/VBoxContainer/UtilitiesContainer/UtilityBoxes")
root = NodePath("../../../../../../../..")

[node name="VSeparator" type="VSeparator" parent="Control/PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="CharacterContainer" type="PanelContainer" parent="Control/PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Control/PanelContainer/MarginContainer/HBoxContainer/CharacterContainer"]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="Control/PanelContainer/MarginContainer/HBoxContainer/CharacterContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/PanelContainer/MarginContainer/HBoxContainer/CharacterContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Character"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Control/PanelContainer/MarginContainer/HBoxContainer/CharacterContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="UtilitiesContainer" type="VBoxContainer" parent="Control/PanelContainer/MarginContainer/HBoxContainer/CharacterContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/PanelContainer/MarginContainer/HBoxContainer/CharacterContainer/MarginContainer/VBoxContainer/UtilitiesContainer"]
layout_mode = 2
text = "Utilities"

[node name="UtilityBoxes" type="HBoxContainer" parent="Control/PanelContainer/MarginContainer/HBoxContainer/CharacterContainer/MarginContainer/VBoxContainer/UtilitiesContainer" node_paths=PackedStringArray("root")]
layout_mode = 2
script = ExtResource("2_otb1w")
root = NodePath("../../../../../../../../..")

[node name="Confirm" type="Button" parent="Control/PanelContainer/MarginContainer/HBoxContainer/CharacterContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
text = "Confirm"

[node name="Back" type="Button" parent="Control/PanelContainer"]
modulate = Color(0, 0.45098, 1, 1)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "<-"

[connection signal="pressed" from="Control/PanelContainer/MarginContainer/HBoxContainer/CharacterContainer/MarginContainer/VBoxContainer/Confirm" to="." method="_on_confirm_pressed"]
[connection signal="pressed" from="Control/PanelContainer/Back" to="." method="_on_back_pressed"]
